--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <!-- HEADER and NAVBAR -->
     <div class="container-fluid header d-flex py-3">
-        <header class="d-flex  align-items-center justify-content-between justify-content-lg-between py-3 px-5">
+        <header class="d-flex  align-items-center justify-content-between justify-content-lg-between py-3 px-md-5 px-1">
           <div class=" w-auto logo" >
             <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center justify-content-evenly">
               <img  src="images/fcc logo high res.png" alt="FCC" width="70" height="70">
@@ -147,7 +147,7 @@
       <div class="white2 white-noise"></div>
       <div class="who-head who-large who">So,<br> Who are we?</div>
       <div class="who-head who-small who"><p>So, Who are we?</p></div>
-      <div class="who-text who">We are a student-run body with a vision to develop and cultivate Finance and consulting related interests in the institute. We work towards promoting different fields of finance, consulting, and product management amongst the students and provide a means for them to explore the same via sessions, competitions, projects, and any other avenues possible.</div>
+      <div class="who-text who">We are a student-run body with a vision to develop and cultivate Finance and Consulting related interests in the institute. We work towards promoting different fields of finance, consulting, and product management amongst the students and provide a means for them to explore the same via sessions, competitions, projects, and any other avenues possible.</div>
     </div>
     
   <!-- WHAT DO WE DO SECTION -->
@@ -166,7 +166,7 @@
               <img src="images/Frame.svg" width="60%" height="60%" alt="">
             </div>
             <div class="subcard-bottom h-50 w-100">
-              <p>Product Management</p>
+              <p>Finance</p>
             </div>
           </div>
       </div>
@@ -177,7 +177,7 @@
               <img src="images/Frame.svg" width="60%" height="60%" alt="">
             </div>
             <div class="subcard-bottom h-50 w-100">
-              <p>Finance</p>
+              <p>Consulting</p>
             </div>
           </div>
       </div>
@@ -188,10 +188,26 @@
               <img src="images/Frame.svg" width="60%" height="60%" alt="">
             </div>
             <div class="subcard-bottom h-50 w-100">
-              <p>Consulting</p>
+              <p>Product Management</p>
             </div>
           </div>
       </div>
+      </div>
+    </div>
+
+    <div class="engagements my-4 py-4">
+      <div class="engage-heading my-4">
+        <p>Our Engagements!</p>
+      </div>
+      <div class="engage-grid">
+        <div class="engage-grid-card" id="grid-card1"><p>Stocks 101</p></div>
+        <div class="engage-grid-card" id="grid-card2"><p>Scroll to Reveal</p></div>
+        <div class="engage-grid-card" id="grid-card3"><p>Decoding Quant</p></div>
+        <div class="engage-grid-card" id="grid-card4"><p>Industry Projects</p></div>
+        <div class="engage-grid-card" id="grid-card5"><p>Workshops</p></div>
+        <div class="engage-grid-card d-flex flex-column justify-content-center" id="grid-card6"><div class="w-100 text-center upto">upto</div><div class="w-100 text-center x">2X</div><p class="w-100 para">more students placed <br>in fin-con roles</p></div>
+        <div class="engage-grid-card" id="grid-card7"><p>Consulting 101</p></div>
+        <div class="engage-grid-card" id="grid-card8"><p>more...</p></div>
       </div>
     </div>
 
