--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -41,7 +41,7 @@
 <body class="horizon-page">
     <!-- HEADER and NAVBAR -->
     <div class="container-fluid header d-flex py-3">
-        <header class="d-flex  align-items-center justify-content-between justify-content-lg-between py-3 px-5">
+        <header class="d-flex  align-items-center justify-content-between justify-content-lg-between py-3 px-md-5 px-1">
           <div class=" w-auto logo" >
             <a href="../index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center justify-content-evenly">
               <img  src="../images/fcc logo high res.png" alt="FCC" width="70" height="70">
@@ -104,24 +104,28 @@
         <div class="who-head who-small who">
           <p>About the Event</p>
         </div>
-        <div class="who-text who w-100">Horizon is the flagship event organized by the FCC, offers an essential forum to interact with distinguished speakers and accomplished professionals in the fields of finance, consulting, and product management
-        </div>
+        <div class="who-text who w-100">Horizon 2024, the flagship event of FCC IITH, brings in some of the best speakers and leaders to promote the knowledge of Finance, Consulting, and Product Management among the community via thought-provoking Keynote Talks, Panel Discussions, Career Guidance Meetups, Networking Lobbies, Workshops and Competitions.
 
       </div>
       <div class="about-row d-flex justify-content-evenly flex-wrap my-3">
         <div class="about-outcard">
           <div class="about-card about-card-1 ">
-            <img src="../images/3000+.svg" width="100%" height="100%" alt="">
+            <img src="../images/horizon-about/3.svg" width="100%" height="100%" alt="">
         </div>
         </div>
         <div class="about-outcard">
           <div class="about-card about-card-2 ">
-            <img src="../images/60+.svg" width="100%" height="100%" alt="">
+            <img src="../images/horizon-about/1.svg" width="100%" height="100%" alt="">
         </div>
         </div>
         <div class="about-outcard">
           <div class="about-card about-card-3 "> 
-            <img src="../images/30+.svg" width="100%" height="100%" alt="">
+            <img src="../images/horizon-about/4.svg" width="100%" height="100%" alt="">
+        </div>
+        </div>
+        <div class="about-outcard">
+          <div class="about-card about-card-3 "> 
+            <img src="../images/horizon-about/2.svg" width="100%" height="100%" alt="">
         </div>
         </div>
       </div>
@@ -137,26 +141,11 @@
 
       </div>
     </div>
-
-    <div class="engagements my-4 py-4">
-      <div class="engage-heading my-4">
-        <p>Our Engagements!</p>
-      </div>
-      <div class="engage-grid">
-        <div class="engage-grid-card" id="grid-card1"><p>Stocks 101</p></div>
-        <div class="engage-grid-card" id="grid-card2"><p>Scroll to Reveal</p></div>
-        <div class="engage-grid-card" id="grid-card3"><p>Decoding Quant</p></div>
-        <div class="engage-grid-card" id="grid-card4"><p>Industry Projects</p></div>
-        <div class="engage-grid-card" id="grid-card5"><p>Workshops</p></div>
-        <div class="engage-grid-card" id="grid-card6"><p>upto 2X more students placed</p></div>
-        <div class="engage-grid-card" id="grid-card7"><p>Consulting 101</p></div>
-        <div class="engage-grid-card" id="grid-card8"><p>more...</p></div>
-      </div>
     </div>
     
 
       <!-- FOOTER -->
-      <div class="footer container-fluid w-auto h-auto" id="footer">
+      <div class="footer container-fluid w-100 h-auto" id="footer">
         <div class="white-noise1 white1-1"></div>
         <div class="white-noise1 white2-1"></div>
         <footer class="row row-cols-1 row-cols-sm-1 row-cols-md-5">
