--- a/pages/Sponsors.html
+++ b/pages/Sponsors.html
@@ -41,7 +41,7 @@
 <body>
     <!-- HEADER and NAVBAR -->
     <div class="container-fluid header d-flex py-3">
-        <header class="d-flex  align-items-center justify-content-between justify-content-lg-between py-3 px-5">
+        <header class="d-flex  align-items-center justify-content-between justify-content-lg-between py-3 px-md-5">
           <div class=" w-auto logo" >
             <a href="../index.html" class="d-inline-flex link-body-emphasis text-decoration-none align-items-center justify-content-evenly">
               <img  src="../images/fcc logo high res.png" alt="FCC" width="70" height="70">
