--- a/index.html
+++ b/index.html
@@ -158,42 +158,20 @@
         What Do We Do?
       </p>
     </div>
-    <div class="what-cards d-flex justify-content-evenly flex-wrap my-3">
+    <div class="what-cards d-flex justify-content-center flex-wrap ">
       <div class="what-card" id="card1">
-          <div class="what-subcard" id="subcard1">
-            <div class="subcard-top h-50 w-100">
-              <p>View Sessions</p>
-              <img src="images/Frame.svg" width="60%" height="60%" alt="">
-            </div>
-            <div class="subcard-bottom h-50 w-100">
-              <p>Finance</p>
-            </div>
-          </div>
+            <img src="images/what-cards/finance.svg" width="100%" height="100%" alt="">
       </div>
       <div class="what-card" id="card2"> 
-          <div class="what-subcard" id="subcard2">
-            <div class="subcard-top h-50 w-100">
-              <p>View Sessions</p>
-              <img src="images/Frame.svg" width="60%" height="60%" alt="">
-            </div>
-            <div class="subcard-bottom h-50 w-100">
-              <p>Consulting</p>
-            </div>
-          </div>
+            <img src="images/what-cards/consulting.svg" width="100%" height="100%" alt="">
       </div>
       <div class="what-card" id="card3">
-          <div class="what-subcard" id="subcard3">
-            <div class="subcard-top h-50 w-100">
-              <p>View Sessions</p>
-              <img src="images/Frame.svg" width="60%" height="60%" alt="">
-            </div>
-            <div class="subcard-bottom h-50 w-100">
-              <p>Product Management</p>
-            </div>
-          </div>
+            <img src="images/what-cards/prodman.svg" width="100%" height="100%" alt="">  
       </div>
       </div>
     </div>
+    
+    <div class="orange-bg"></div>
 
     <div class="engagements my-4 py-4">
       <div class="engage-heading my-4">
@@ -267,14 +245,6 @@
           </div>
         </footer>
       </div>
-
-
-      <script>
-        $(".what-subcard").click(function(){
-            window.open('pages/Horizon.html' )
-            return false;
-        })
-      </script>
 
   </body>
 
