--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -143,6 +143,17 @@
     </div>
     </div>
     
+    <div class="past-speakers my-4">
+      <div class="speakers-heading my-4">
+        <p>Past Speakers</p>
+      </div>
+      <div class="speakers-grid d-flex justify-content-evenly flex-wrap px-5 my-4 w-100">
+        <div class="speaker-card"><img src="../images/pastspeakers/rishabhjain.svg" width="100%" height="100%" alt=""></div>
+        <div class="speaker-card"><img src="../images/pastspeakers/akhilsharma.svg" width="100%" height="100%" alt=""></div>
+        <div class="speaker-card"><img src="../images/pastspeakers/gauravmahindra.svg" width="100%" height="100%" alt=""></div>
+        <div class="speaker-card"><img src="../images/pastspeakers/subbaperepa.svg" width="100%" height="100%" alt=""></div>
+      </div>
+    </div>
 
       <!-- FOOTER -->
       <div class="footer container-fluid w-100 h-auto" id="footer">
