Sponsors Carousel added

--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -155,6 +155,20 @@
       </div>
     </div>
 
+    <div class="hor-sponsors my-4">
+      <div class="hor-sponsor-heading">
+        <p>Sponsors</p>
+      </div>
+      <div class="hor-sponsors-carousel">
+        <div class="sponsor-card"><img src="../images/sponsors/blogadda.svg" width="100%" height="100%" alt=""></div>
+        <div class="sponsor-card"><img src="../images/sponsors/elearnmarkets.svg" width="100%" height="100%" alt=""></div>
+        <div class="sponsor-card"><img src="../images/sponsors/finlatics.svg" width="100%" height="100%" alt=""></div>
+        <div class="sponsor-card"><img src="../images/sponsors/mentoverse.svg" width="100%" height="100%" alt=""></div>
+        <div class="sponsor-card"><img src="../images/sponsors/product.svg" width="100%" height="100%" alt=""></div>
+        <div class="sponsor-card"><img src="../images/sponsors/yes bank.svg" width="100%" height="100%" alt=""></div>
+      </div>
+    </div>
+
       <!-- FOOTER -->
       <div class="footer container-fluid w-100 h-auto" id="footer">
         <div class="white-noise1 white1-1"></div>
