--- a/pages/Team.html
+++ b/pages/Team.html
@@ -20,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../pages-css/team.css">
     
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -84,12 +85,61 @@
     <div class="body-bg-grad"></div>
     <!-- <img class="rightboxblur" src="/images/Group 1blockright.svg" alt="" width="300" height="300"> -->
     
+    <div class="main-team-heading">
+      <p>Meet the Team</p>
+    </div>
+
+    <div class="team overall-head">
+      <div class="team-heading">
+        <p>Overall Heads</p>
+      </div>
+      <div class="team-grid">
+        <div class="team-card-overall"><img src="../images/team/overall heads/prateek.svg" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-overall"><img src="../images/team/overall heads/lokesh.svg"  width="100%" height="100%" alt=""></div>
+      </div>
+    </div>
+
+    <div class="team head">
+      <div class="team-heading">
+        <p>Heads</p>
+      </div>
+      <div class="team-grid heads">
+        <div class="team-card-heads"><img src="../images/team/heads/himanshu.svg" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/gowri.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/jay.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/kaushik.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/ashutosh.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/harini.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/Yash.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/Niharika.svg"  width="100%" height="100%" alt=""></div>
+      </div>
+    </div>
+    <hr>
+    <div class="team consulting">
+      <div class="team-heading">
+        <p>Consulting</p>
+      </div>
+      <div class="team-grid heads">
+        <div class="team-card-heads"><img src="../images/team/consulting/ahmik.svg" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/anirudh.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/omkar.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/ananyan.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/omkar-2.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/pritesh.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/tanmay.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/yashas.svg"  width="100%" height="100%" alt=""></div>
+      </div>
+    </div>
+
+
+
+
 
       <!-- FOOTER -->
       <div class="footer container-fluid w-auto h-auto" id="footer">
         <div class="white-noise1 white1-1"></div>
         <div class="white-noise1 white2-1"></div>
-        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 border-top ">
+        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 ">
           <div class="col mb-3">
             <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
               <img src="../images/Group 31.svg" width="100%" height="100%" alt="">
