team page changes

--- a/pages/Team.html
+++ b/pages/Team.html
@@ -94,8 +94,8 @@
         <p>Overall Heads</p>
       </div>
       <div class="team-grid">
-        <div class="team-card-overall"><img src="../images/team/overall heads/prateek.svg" width="100%" height="100%"  alt=""></div>
-        <div class="team-card-overall"><img src="../images/team/overall heads/lokesh.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-overall"><img src="../images/team/overall heads/prateek.png" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-overall"><img src="../images/team/overall heads/lokesh.png"  width="100%" height="100%" alt=""></div>
       </div>
     </div>
 
@@ -104,32 +104,52 @@
         <p>Heads</p>
       </div>
       <div class="team-grid heads">
-        <div class="team-card-heads"><img src="../images/team/heads/himanshu.svg" width="100%" height="100%"  alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/heads/gowri.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/heads/jay.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/heads/kaushik.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/heads/ashutosh.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/heads/harini.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/heads/Yash.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/heads/Niharika.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/himanshu.png" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/gowri.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/jay.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/kaushik.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/ashutosh.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/harini.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/Yash.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/Niharika.png"  width="100%" height="100%" alt=""></div>
       </div>
     </div>
     <hr>
+
     <div class="team consulting">
       <div class="team-heading">
         <p>Consulting</p>
       </div>
       <div class="team-grid heads">
-        <div class="team-card-heads"><img src="../images/team/consulting/ahmik.svg" width="100%" height="100%"  alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/consulting/anirudh.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/consulting/omkar.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/consulting/ananyan.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/consulting/omkar-2.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/consulting/pritesh.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/consulting/tanmay.svg"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/consulting/yashas.svg"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/Ahmik.png" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/Anirudh.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/Omkar.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/Ananyan.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/Omkar-2.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/Pritesh.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/Tanmay.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/consulting/Yashas.png"  width="100%" height="100%" alt=""></div>
       </div>
     </div>
+    <hr>
+
+    <div class="team finance">
+      <div class="team-heading">
+        <p>Finance</p>
+      </div>
+      <div class="team-grid heads">
+        <div class="team-card-heads"><img src="../images/team/finance/Aayush.png" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/finance/Arin.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/finance/Avantika.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/finance/Beaula.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/finance/Hanna.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/finance/Prathamesh.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/finance/Satya.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/finance/Samuel.png"  width="100%" height="100%" alt=""></div>
+      </div>
+    </div>
+    <hr>
+
 
 
 
