--- a/pages/Team.html
+++ b/pages/Team.html
@@ -110,8 +110,8 @@
         <div class="team-card-heads"><img src="../images/team/heads/kaushik.png"  width="100%" height="100%" alt=""></div>
         <div class="team-card-heads"><img src="../images/team/heads/ashutosh.png"  width="100%" height="100%" alt=""></div>
         <div class="team-card-heads"><img src="../images/team/heads/harini.png"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/heads/Yash.png"  width="100%" height="100%" alt=""></div>
-        <div class="team-card-heads"><img src="../images/team/heads/Niharika.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/yash.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/heads/niharika.png"  width="100%" height="100%" alt=""></div>
       </div>
     </div>
     <hr>
