--- a/pages/Team.html
+++ b/pages/Team.html
@@ -150,6 +150,78 @@
     </div>
     <hr>
 
+    <div class="team design">
+      <div class="team-heading">
+        <p>Design and Multimedia</p>
+      </div>
+      <div class="team-grid heads">
+        <div class="team-card-heads"><img src="../images/team/design/tanmayvrao.png" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/design/ananya.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/design/padmanabhan.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/design/ansh.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/design/sreevas.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/design/ebaad.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/design/aryan.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/design/shivansh.png"  width="100%" height="100%" alt=""></div>
+      </div>
+    </div>
+    <hr>
+
+    <div class="team Hospi">
+      <div class="team-heading">
+        <p>Hospitality and Logistics</p>
+      </div>
+      <div class="team-grid heads">
+        <div class="team-card-heads"><img src="../images/team/hospi/arin-hospi.png" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/hospi/samiskha-hospi.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/hospi/aryan-hospi.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/hospi/rishi-hospi.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/hospi/soham-hospi.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/hospi/vardhman-hospi.png"  width="100%" height="100%" alt=""></div>
+      </div>
+    </div>
+    <hr>
+
+    <div class="team sponsorship">
+      <div class="team-heading">
+        <p>Sponsorship</p>
+      </div>
+      <div class="team-grid heads">
+        <div class="team-card-heads"><img src="../images/team/sponsorship/aryan-spon-min.png" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/sponsorship/ashok-spon-min.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/sponsorship/nishant-spon-min.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/sponsorship/Shubham-spon-min.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/sponsorship/parth-spon-min.png"  width="100%" height="100%" alt=""></div>
+      </div>
+    </div>
+    <hr>
+
+    <div class="team pr">
+      <div class="team-heading">
+        <p>PR & Outreach</p>
+      </div>
+      <div class="team-grid heads">
+        <div class="team-card-heads"><img src="../images/team/pr/muzaan-pr-min.png" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/pr/sadhika-pr-min.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/pr/pawas-pr-min.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/pr/nikita-pr-min.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/pr/sujal-pr-min.png"  width="100%" height="100%" alt=""></div>
+      </div>
+    </div>
+    <hr>
+
+    <div class="team web">
+      <div class="team-heading">
+        <p>Web</p>
+      </div>
+      <div class="team-grid heads">
+        <div class="team-card-heads"><img src="../images/team/web/abhinay-web-min.png" width="100%" height="100%"  alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/web/anand-web-min.png"  width="100%" height="100%" alt=""></div>
+        <div class="team-card-heads"><img src="../images/team/web/vishnu-web-min.png  "  width="100%" height="100%" alt=""></div>
+      </div>
+    </div>
+    <hr>
+
 
 
 
