--- a/pages/Team.html
+++ b/pages/Team.html
@@ -103,7 +103,7 @@
       <div class="team-heading">
         <p>Heads</p>
       </div>
-      <div class="team-grid heads">
+      <div class="team-grid ">
         <div class="team-card-heads"><img src="../images/team/heads/himanshu.png" width="100%" height="100%"  alt=""></div>
         <div class="team-card-heads"><img src="../images/team/heads/gowri.png"  width="100%" height="100%" alt=""></div>
         <div class="team-card-heads"><img src="../images/team/heads/jay.png"  width="100%" height="100%" alt=""></div>
@@ -120,7 +120,7 @@
       <div class="team-heading">
         <p>Consulting</p>
       </div>
-      <div class="team-grid heads">
+      <div class="team-grid ">
         <div class="team-card-heads"><img src="../images/team/consulting/Ahmik.png" width="100%" height="100%"  alt=""></div>
         <div class="team-card-heads"><img src="../images/team/consulting/Anirudh.png"  width="100%" height="100%" alt=""></div>
         <div class="team-card-heads"><img src="../images/team/consulting/Omkar.png"  width="100%" height="100%" alt=""></div>
@@ -137,7 +137,7 @@
       <div class="team-heading">
         <p>Finance</p>
       </div>
-      <div class="team-grid heads">
+      <div class="team-grid ">
         <div class="team-card-heads"><img src="../images/team/finance/Aayush.png" width="100%" height="100%"  alt=""></div>
         <div class="team-card-heads"><img src="../images/team/finance/Arin.png"  width="100%" height="100%" alt=""></div>
         <div class="team-card-heads"><img src="../images/team/finance/Avantika.png"  width="100%" height="100%" alt=""></div>
@@ -154,7 +154,7 @@
       <div class="team-heading">
         <p>Design and Multimedia</p>
       </div>
-      <div class="team-grid heads">
+      <div class="team-grid ">
         <div class="team-card-heads"><img src="../images/team/design/tanmayvrao.png" width="100%" height="100%"  alt=""></div>
         <div class="team-card-heads"><img src="../images/team/design/ananya.png"  width="100%" height="100%" alt=""></div>
         <div class="team-card-heads"><img src="../images/team/design/padmanabhan.png"  width="100%" height="100%" alt=""></div>
@@ -171,7 +171,7 @@
       <div class="team-heading">
         <p>Hospitality and Logistics</p>
       </div>
-      <div class="team-grid heads">
+      <div class="team-grid ">
         <div class="team-card-heads"><img src="../images/team/hospi/arin-hospi.png" width="100%" height="100%"  alt=""></div>
         <div class="team-card-heads"><img src="../images/team/hospi/samiskha-hospi.png"  width="100%" height="100%" alt=""></div>
         <div class="team-card-heads"><img src="../images/team/hospi/aryan-hospi.png"  width="100%" height="100%" alt=""></div>
@@ -186,7 +186,7 @@
       <div class="team-heading">
         <p>Sponsorship</p>
       </div>
-      <div class="team-grid heads">
+      <div class="team-grid ">
         <div class="team-card-heads"><img src="../images/team/sponsorship/aryan-spon-min.png" width="100%" height="100%"  alt=""></div>
         <div class="team-card-heads"><img src="../images/team/sponsorship/ashok-spon-min.png"  width="100%" height="100%" alt=""></div>
         <div class="team-card-heads"><img src="../images/team/sponsorship/nishant-spon-min.png"  width="100%" height="100%" alt=""></div>
@@ -200,7 +200,7 @@
       <div class="team-heading">
         <p>PR & Outreach</p>
       </div>
-      <div class="team-grid heads">
+      <div class="team-grid ">
         <div class="team-card-heads"><img src="../images/team/pr/muzaan-pr-min.png" width="100%" height="100%"  alt=""></div>
         <div class="team-card-heads"><img src="../images/team/pr/sadhika-pr-min.png"  width="100%" height="100%" alt=""></div>
         <div class="team-card-heads"><img src="../images/team/pr/pawas-pr-min.png"  width="100%" height="100%" alt=""></div>
@@ -214,18 +214,13 @@
       <div class="team-heading">
         <p>Web</p>
       </div>
-      <div class="team-grid heads">
+      <div class="team-grid ">
         <div class="team-card-heads"><img src="../images/team/web/abhinay-web-min.png" width="100%" height="100%"  alt=""></div>
         <div class="team-card-heads"><img src="../images/team/web/anand-web-min.png"  width="100%" height="100%" alt=""></div>
         <div class="team-card-heads"><img src="../images/team/web/vishnu-web-min.png  "  width="100%" height="100%" alt=""></div>
       </div>
     </div>
     <hr>
-
-
-
-
-
 
       <!-- FOOTER -->
       <div class="footer container-fluid w-auto h-auto" id="footer">
