--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -106,8 +106,8 @@
         </div>
         <div class="who-text who w-100">Horizon 2024, the flagship event of FCC IITH, brings in some of the best speakers and leaders to promote the knowledge of Finance, Consulting, and Product Management among the community via thought-provoking Keynote Talks, Panel Discussions, Career Guidance Meetups, Networking Lobbies, Workshops and Competitions.
 
-      </div>
-      <div class="about-row d-flex justify-content-evenly flex-wrap my-3">
+        </div>
+        <div class="about-row my-3">
         <div class="about-outcard">
             <img src="../images/horizon-about/3.svg" width="100%" height="100%" alt="">
         </div>
@@ -115,23 +115,23 @@
             <img src="../images/horizon-about/1.svg" width="100%" height="100%" alt="">
         </div>
         <div class="about-outcard">
-            <img src="../images/horizon-about/4.svg" width="100%" height="100%" alt="">
+          <img src="../images/horizon-about/4.svg" width="100%" height="100%" alt="">
         </div>
         <div class="about-outcard">
             <img src="../images/horizon-about/2.svg" width="100%" height="100%" alt="">
         </div>
       </div>
-      <div class="about-section-sub my-3">
+
         <div class="who-head who-large who w-100">Our Vision<br> for 2024</div>
         <div class="who-head who-small who w-100">
           <p>Our Vision for 2024</p>
         </div>
         <div class="who-text who w-100">In 2023-24,  Horizon aims to expand its influence to students community by inviting industry, academia, and government experts to share insights on Finance, Consulting, and Product Management.
 
-          We will introduce new competitions and workshops solidifying its status as the go-to platform for Finance, Consulting, and Product Management enthusiasts.
+          <p>We will introduce new competitions and workshops solidifying its status as the go-to platform for Finance, Consulting, and Product Management enthusiasts.</p>
         </div>
 
-      </div>
+
     </div>
     </div>
     
