--- a/pages/Team.html
+++ b/pages/Team.html
@@ -50,10 +50,10 @@
           </div>
           
           <ul class="nav col-12 col-md-auto mb-2  mb-md-0 w-auto navlinks d-none d-lg-flex justify-content-center">
+            <li><a href="../index.html" class="nav-link fs-5 head-navlink px-3 fw-light">Home</a></li>
             <li><a href="Horizon.html" class="nav-link fs-5 head-navlink px-3 fw-light" >Horizon</a></li>
             <li><a href="Sponsors.html" class="nav-link fs-5 head-navlink px-3 fw-light">Sponsors</a></li>
             <li><a href="Team.html" class="nav-link fs-5 head-navlink px-3 fw-light"  style=" color: #70bdee;">Team</a></li>
-            <li><a href="#footer" class="nav-link fs-5 head-navlink px-3 fw-light">Resources</a></li>
             <li><a href="#footer" class="nav-link fs-5 head-navlink px-3 fw-light">Contact</a></li>
         </ul>
 
@@ -67,11 +67,11 @@
             <div class="offcanvas-header d-flex justify-content-end bg-transparent d-lg-none">
               <button type="button" class="btn-close bg-light " data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
             </div>
-            <div class=" flex flex-col justify-evenly h-100 d-lg-none links w-auto">
-                  <a href="../index.html" class="toggle-links">Horizon</a>
+            <div class=" flex flex-col justify-evenly h-100 d-lg-none links ">
+                  <a href="../index.html" class="toggle-links ">Home</a>
+                  <a href="Horizon.html" class="toggle-links">Horizon</a>
                   <a href="Sponsors.html" class="toggle-links ">Sponsors</a>
-                  <a href="Team.html" class="toggle-links ">Team</a>
-                  <a href="../index.html" class="toggle-links ">Resources</a>
+                  <a href="Team.html" class="toggle-links " style=" color: #70bdee;">Team</a>
                   <a href="#footer" class="toggle-links ">Contact</a>
               </div>
           </div>
@@ -248,7 +248,7 @@
               <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-body-light">Home</a></li>
               <li class="nav-item mb-2"><a href="Horizon.html" class="nav-link p-0 text-body-light" target="_blank">Horizon</a></li>
               <li class="nav-item mb-2"><a href="Sponsors.html" class="nav-link p-0 text-body-light" target="_blank">Sponsors</a></li>
-              <li class="nav-item mb-2"><a href="Workshops.html" class="nav-link p-0 text-body-light" target="_blank">Workshops</a></li>
+              <li class="nav-item mb-2"><a href="Horizon.html" class="nav-link p-0 text-body-light" target="_blank">Workshops</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
             </ul>
           </div>
