--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
           </div>
           
           <ul class="nav col-12 col-md-auto mb-2  mb-md-0 w-auto navlinks d-none d-lg-flex justify-content-center">
+            <li><a href="index.html" class="nav-link fs-5 head-navlink px-3 fw-light"   style=" color: #70bdee;">Home</a></li>
             <li><a href="pages/Horizon.html" class="nav-link fs-5 head-navlink px-3 fw-light">Horizon</a></li>
             <li><a href="pages/Sponsors.html" class="nav-link fs-5 head-navlink px-3 fw-light">Sponsors</a></li>
             <li><a href="pages/Team.html" class="nav-link fs-5 head-navlink px-3 fw-light">Team</a></li>
-            <li><a href="#what-we-do" class="nav-link fs-5 head-navlink px-3 fw-light">Resources</a></li>
             <li><a href="#footer" class="nav-link fs-5 head-navlink px-3 fw-light">Contact</a></li>
         </ul>
 
@@ -67,10 +67,10 @@
               <button type="button" class="btn-close bg-light " data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
             </div>
             <div class=" flex flex-col justify-evenly h-100 d-lg-none links">
+                  <a href="index.html" class="toggle-links"   style=" color: #70bdee;">Home</a>
                   <a href="pages/Horizon.html" class="toggle-links">Horizon</a>
                   <a href="pages/Sponsors.html" class="toggle-links ">Sponsors</a>
                   <a href="pages/Team.html" class="toggle-links ">Team</a>
-                  <a href="#footer" class="toggle-links ">Resources</a>
                   <a href="#footer" class="toggle-links ">Contact</a>
               </div>
           </div>
@@ -80,7 +80,6 @@
     <img class="svgblur1" src="images/rupeeblur.svg" alt="" height="50" width="50" title="svg">
     <img class="svgblur2" src="images/rupeeblur.svg" alt="" height="70" width="70" title="svg">
     <img class="svgblur3" src="images/rupeeblur.svg" alt="" height="40" width="40" title="svg">
-    <!-- <img class="rightboxblur" src="/images/glowblocksmall.png" alt="" height="400" width="400"> -->
     <div class="body-bg-grad"></div>
     <!-- <img class="rightboxblur" src="/images/Group 1blockright.svg" alt="" width="300" height="300"> -->
     
@@ -217,7 +216,7 @@
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light">Home</a></li>
               <li class="nav-item mb-2"><a href="pages/Horizon.html" class="nav-link p-0 text-body-light" target="_blank">Horizon</a></li>
               <li class="nav-item mb-2"><a href="pages/Sponsors.html" class="nav-link p-0 text-body-light" target="_blank">Sponsors</a></li>
-              <li class="nav-item mb-2"><a href="pages/Workshops.html" class="nav-link p-0 text-body-light" target="_blank">Workshops</a></li>
+              <li class="nav-item mb-2"><a href="pages/Horizon.html" class="nav-link p-0 text-body-light" target="_blank">Workshops</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
             </ul>
           </div>
