--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <div class="col mb-3">
             <h5>About Us</h5>
             <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light" target="_blank">FCC Leadership</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light" target="_blank">FCC Team</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light" target="_blank">Blogs</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light" target="_blank">Gallery</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light" target="_blank">Contact Us</a></li>
