--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                       <p class="display-5 fw-bold text-body-light lh-1 mb-3 fcc-main-heading">Finance and Consulting Club</p>
                       <p class="display-5 fw-light text-body-light lh-1 mb-3 iith-main-heading">IIT Hyderabad</p>
                 </div>
+                <div class="btn btn-primary btn-lg horizon-button " >
+                  Horizon 24' <img src="images/Double Alt Arrow Right.png" height="60" alt="">
+                </div>
 
 
                 </div>
@@ -125,7 +128,7 @@
       <div class="arrow">
           <img class="arrowsvg" src="images/Vector.svg" alt="" height="90%" width="90%">
       </div>
-    <h3 class=" mission fs-2 quote-span" >Our mission</h3>
+    <h3 class=" mission fs-2 " >Our mission</h3>
     <div class="quote-text col-lg-6  ">
         <p class="quote-span q1">TO PROVE</p>
         <p class="quote-span q2">THAT <br></p>
