--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -86,10 +86,10 @@
       <!-- Landing Part Horizon -->
     <div class="px-4 py-5 my-5 text-center">
         <p class="display-5 iith-heading-hor">FCC IIT-HYDERABAD Presents</p>
-        <div class="col-lg-6 mx-auto">
+        <div class="col-lg-6 mx-auto w-100 d-flex flex-column gap-0">
           <p class="lead mb-4 hor-heading-hor">HORIZON 24'</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center hor-button">
-            <button type="button" class="btn btn-primary btn-lg px-4">GRAB YOUR PASSES!!</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block px-4 hor-button">GRAB YOUR PASSES NOW!!</button>
           </div>
         </div>
       </div>
