--- a/pages/Team.html
+++ b/pages/Team.html
@@ -234,9 +234,9 @@
           <div class="col mb-3">
             <h5>About Us</h5>
             <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light" target="_blank">FCC Leadership</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light" target="_blank">Blogs</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light" target="_blank">Gallery</a></li>
+              <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">FCC Leadership</a></li>
+              <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Blogs</a></li>
+              <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Gallery</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light" target="_blank">Contact Us</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
             </ul>
@@ -248,7 +248,7 @@
               <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-body-light">Home</a></li>
               <li class="nav-item mb-2"><a href="Horizon.html" class="nav-link p-0 text-body-light" target="_blank">Horizon</a></li>
               <li class="nav-item mb-2"><a href="Sponsors.html" class="nav-link p-0 text-body-light" target="_blank">Sponsors</a></li>
-              <li class="nav-item mb-2"><a href="Horizon.html" class="nav-link p-0 text-body-light" target="_blank">Workshops</a></li>
+              <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Workshops</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
             </ul>
           </div>
