--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="white2 white-noise"></div>
       <div class="who-head who-large who">So,<br> Who are we?</div>
       <div class="who-head who-small who"><p>So, Who are we?</p></div>
-      <div class="who-text who">We are a student-run body with a vision to develop and cultivate Finance and Consulting related interests in the institute. We work towards promoting different fields of finance, consulting, and product management amongst the students and provide a means for them to explore the same via sessions, competitions, projects, and any other avenues possible.</div>
+      <div class="who-text who">The Finance and Consulting Club at IIT Hyderabad is a student-led organization fostering finance and consulting interests. At FCC IITH, students are driven by their passion for finance, consulting, product management and continual progress. Their dedicated team plans a variety of events, such as stimulating lectures, engaging workshops, impactful projects, rigorous competitions, and more, all geared toward achieving their mission of equipping students with useful skills and real-world knowledge in the finance, consulting, and product management domains.</div>
     </div>
     
   <!-- WHAT DO WE DO SECTION -->
@@ -162,13 +162,13 @@
     </div>
     <div class="what-cards d-flex justify-content-center flex-wrap ">
       <div class="what-card" id="card1">
-            <img src="images/what-cards/finance.svg" width="100%" height="100%" alt="">
+            <img src="images/what-cards/finance.svg"  class="card-image" width="110%" height="110%" alt="">
       </div>
       <div class="what-card" id="card2"> 
-            <img src="images/what-cards/consulting.svg" width="100%" height="100%" alt="">
+            <img src="images/what-cards/consulting.svg"  class="card-image" width="110%" height="110%" alt="">
       </div>
       <div class="what-card" id="card3">
-            <img src="images/what-cards/prodman.svg" width="100%" height="100%" alt="">  
+            <img src="images/what-cards/prodman.svg" class="card-image"  width="110%" height="110%" alt="">  
       </div>
       </div>
     </div>
