--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </div>
     
     
-    <div class="engagements my-4 py-4">
+    <div class="engagements ">
       <div class="orange-bg"></div>
       <div class="engage-heading my-4">
         <p>Our Engagements!</p>
@@ -189,6 +189,10 @@
         <div class="engage-grid-card" id="grid-card7"><p>Consulting 101</p></div>
         <div class="engage-grid-card" id="grid-card8"><p>more...</p></div>
       </div>
+    </div>
+
+    <div class="flagship " style="height: 300px; width: 100%;">
+      <div class="card">card</div>
     </div>
 
       <!-- FOOTER -->
