--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           
           <ul class="nav col-12 col-md-auto mb-2  mb-md-0 w-auto navlinks d-none d-lg-flex justify-content-center">
-            <li><a href="index.html" class="nav-link fs-5 head-navlink px-3 fw-light"   style=" color: #70bdee;">Home</a></li>
+            <li><a href="index.html" class="nav-link fs-5 head-navlink px-3 fw-light current-link"   style=" color: #70bdee;">Home <img src="images/etherium.png" alt=""></a></li>
             <li><a href="pages/Horizon.html" class="nav-link fs-5 head-navlink px-3 fw-light">Horizon</a></li>
             <li><a href="pages/Sponsors.html" class="nav-link fs-5 head-navlink px-3 fw-light">Sponsors</a></li>
             <li><a href="pages/Team.html" class="nav-link fs-5 head-navlink px-3 fw-light">Team</a></li>
@@ -180,14 +180,14 @@
         <p>Our Engagements!</p>
       </div>
       <div class="engage-grid">
-        <div class="engage-grid-card" id="grid-card1"><p>Stocks 101</p></div>
+        <div class="engage-grid-card card " id="grid-card1"><p>Stocks 101</p></div>
         <div class="engage-grid-card" id="grid-card2"><p>Scroll to Reveal</p></div>
-        <div class="engage-grid-card" id="grid-card3"><p>Decoding Quant</p></div>
-        <div class="engage-grid-card" id="grid-card4"><p>Industry Projects</p></div>
-        <div class="engage-grid-card" id="grid-card5"><p>Workshops</p></div>
-        <div class="engage-grid-card d-flex flex-column justify-content-center" id="grid-card6"><div class="w-100 text-center upto">upto</div><div class="w-100 text-center x">2X</div><p class="w-100 para">more students placed <br>in fin-con roles</p></div>
-        <div class="engage-grid-card" id="grid-card7"><p>Consulting 101</p></div>
-        <div class="engage-grid-card" id="grid-card8"><p>more...</p></div>
+        <div class="engage-grid-card card " id="grid-card3"><p>Decoding Quant</p></div>
+        <div class="engage-grid-card card " id="grid-card4"><p>Industry Projects</p></div>
+        <div class="engage-grid-card card " id="grid-card5"><p>Workshops</p></div>
+        <div class="engage-grid-card  card d-flex flex-column justify-content-center" id="grid-card6"><div class="w-100 text-center upto">upto</div><div class="w-100 text-center x">2X</div><p class="w-100 para">more students placed <br>in fin-con roles</p></div>
+        <div class="engage-grid-card card " id="grid-card7"><p>Consulting 101</p></div>
+        <div class="engage-grid-card card " id="grid-card8"><p>more...</p></div>
       </div>
     </div>
 
