--- a/pages/Team.html
+++ b/pages/Team.html
@@ -53,7 +53,7 @@
             <li><a href="../index.html" class="nav-link fs-5 head-navlink px-3 fw-light">Home</a></li>
             <li><a href="Horizon.html" class="nav-link fs-5 head-navlink px-3 fw-light" >Horizon</a></li>
             <li><a href="Sponsors.html" class="nav-link fs-5 head-navlink px-3 fw-light">Sponsors</a></li>
-            <li><a href="Team.html" class="nav-link fs-5 head-navlink px-3 fw-light"  style=" color: #70bdee;">Team</a></li>
+            <li><a href="Team.html" class="nav-link fs-5 head-navlink px-3 fw-light current-link"  style=" color: #70bdee;">Team  <img src="../images/etherium.png" alt=""></a></li>
             <li><a href="#footer" class="nav-link fs-5 head-navlink px-3 fw-light">Contact</a></li>
         </ul>
 
