--- a/pages/Sponsors.html
+++ b/pages/Sponsors.html
@@ -52,7 +52,7 @@
           <ul class="nav col-12 col-md-auto mb-2  mb-md-0 w-auto navlinks d-none d-lg-flex justify-content-center">
             <li><a href="../index.html" class="nav-link fs-5 head-navlink px-3 fw-light">Home</a></li>
             <li><a href="Horizon.html" class="nav-link fs-5 head-navlink px-3 fw-light">Horizon</a></li>
-            <li><a href="Sponsors.html" class="nav-link fs-5 head-navlink px-3 fw-light"   style=" color: #70bdee;">Sponsors</a></li>
+            <li><a href="Sponsors.html" class="nav-link fs-5 head-navlink px-3 fw-light current-link"   style=" color: #70bdee;">Sponsors  <img src="../images/etherium.png" alt=""></a></li>
             <li><a href="Team.html" class="nav-link fs-5 head-navlink px-3 fw-light">Team</a></li>
             <li><a href="#footer" class="nav-link fs-5 head-navlink px-3 fw-light">Contact</a></li>
         </ul>
