--- a/index.html
+++ b/index.html
@@ -173,15 +173,15 @@
       </div>
     </div>
     
-    
-    <div class="engagements ">
+    <!-- Engagements Section -->
+    <div class="engagements my-4">
       <div class="orange-bg"></div>
       <div class="engage-heading my-4">
         <p>Our Engagements!</p>
       </div>
       <div class="engage-grid">
         <div class="engage-grid-card card " id="grid-card1"><p>Stocks 101</p></div>
-        <div class="engage-grid-card" id="grid-card2"><p>Scroll to Reveal</p></div>
+        <div class="engage-grid-card" id="grid-card2"><p>Scroll down to Reveal</p></div>
         <div class="engage-grid-card card " id="grid-card3"><p>Decoding Quant</p></div>
         <div class="engage-grid-card card " id="grid-card4"><p>Industry Projects</p></div>
         <div class="engage-grid-card card " id="grid-card5"><p>Workshops</p></div>
@@ -191,8 +191,17 @@
       </div>
     </div>
 
-    <div class="flagship " style="height: 300px; width: 100%;">
-      <div class="card">card</div>
+
+    <!-- Flagship Section -->
+    <div class="flagship mt-4 py-4" >
+      <div class="flagship-heading my-4">
+        <p>And our Flagship Event</p>
+      </div>
+      <div class="flagship-cards my-4">
+        <div class="flagship-card flagship-card-lower"><img src="images/what-cards/special hovercard1 (3).png" width="100%" height="100%" alt=""></div>
+        <div class="flagship-card" id="flagship-card-upper"><img src="images/what-cards/horizon-card.png" width="100%" height="100%" alt=""></div>
+        <div class="flagship-card flagship-card-lower"><img src="images/what-cards/special hovercard2 (2).png" width="100%" height="100%" alt=""></div>
+      </div>
     </div>
 
       <!-- FOOTER -->
