--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -149,13 +149,21 @@
       <div class="hor-sponsor-heading">
         <p>Sponsors</p>
       </div>
-      <div class="hor-sponsors-carousel">
-        <div class="sponsor-card"><img src="../images/sponsors/blogadda.svg" width="100%" height="100%" alt=""></div>
-        <div class="sponsor-card"><img src="../images/sponsors/elearnmarkets.svg" width="100%" height="100%" alt=""></div>
-        <div class="sponsor-card"><img src="../images/sponsors/finlatics.svg" width="100%" height="100%" alt=""></div>
-        <div class="sponsor-card"><img src="../images/sponsors/mentoverse.svg" width="100%" height="100%" alt=""></div>
-        <div class="sponsor-card"><img src="../images/sponsors/product.svg" width="100%" height="100%" alt=""></div>
-        <div class="sponsor-card"><img src="../images/sponsors/yes bank.svg" width="100%" height="100%" alt=""></div>
+      <div class="hor-sponsors-carousel-1">
+        <div class="sponsor-card card-1 "><img src="../images/sponsors/abhibus-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-2 "><img src="../images/sponsors/decathalon-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-3 "><img src="../images/sponsors/stockgro-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-4 "><img src="../images/sponsors/finlarics-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-5 "><img src="../images/sponsors/monster-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-6 "><img src="../images/sponsors/product-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-7 "><img src="../images/sponsors/sid farm-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-8 "><img src="../images/sponsors/grabon-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-9 "><img src="../images/sponsors/plum-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-10 "><img src="../images/sponsors/startupnews-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-11"><img src="../images/sponsors/edufabrica-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-12 "><img src="../images/sponsors/easemytrip-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-13 "><img src="../images/sponsors/elearnmarkets-min.png" width="90%" height="90%" alt=""></div>
+        <div class="sponsor-card card-14 "><img src="../images/sponsors/preplounge-min.png" width="90%" height="90%" alt=""></div>
       </div>
     </div>
 
