--- a/pages/Sponsors.html
+++ b/pages/Sponsors.html
@@ -34,6 +34,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/Draggable.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/EaselPlugin.min.js" defer></script>
     <script src="../script.js" defer></script>
+    <script src="../pages-js/sponsors.js" defer></script>
 
     <title>FCC</title>
     
@@ -92,12 +93,20 @@
       </div>
       <div class="container-fluid sponsor-grid d-flex flex-column justify-content-evenly">
         <div class="row1 d-flex justify-content-evenly flex-wrap my-3">
-          <div class="sponsor-card card-1 "><img src="../images/sponsors/mentoverse.svg" width="90%" height="90%" alt=""></div>
-          <div class="sponsor-card card-2 "><img src="../images/sponsors/finlatics.svg" width="90%" height="90%" alt=""></div>
-          <div class="sponsor-card card-3 "><img src="../images/sponsors/blogadda.svg" width="90%" height="90%" alt=""></div>
-          <div class="sponsor-card card-4 "><img src="../images/sponsors/elearnmarkets.svg" width="90%" height="90%" alt=""></div>
-          <div class="sponsor-card card-5 "><img src="../images/sponsors/yes bank.svg" width="90%" height="90%" alt=""></div>
-          <div class="sponsor-card card-6 "><img src="../images/sponsors/product.svg" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-1 "><img src="../images/sponsors/abhibus-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-2 "><img src="../images/sponsors/decathalon-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-3 "><img src="../images/sponsors/stockgro-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-4 "><img src="../images/sponsors/finlarics-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-5 "><img src="../images/sponsors/monster-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-6 "><img src="../images/sponsors/product-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-7 "><img src="../images/sponsors/sid farm-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-8 "><img src="../images/sponsors/grabon-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-9 "><img src="../images/sponsors/plum-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-10 "><img src="../images/sponsors/startupnews-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-11"><img src="../images/sponsors/edufabrica-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-12 "><img src="../images/sponsors/easemytrip-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-13 "><img src="../images/sponsors/elearnmarkets-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-14 "><img src="../images/sponsors/preplounge-min.png" width="90%" height="90%" alt=""></div>
         </div>
       </div>
     </div>
