--- a/pages/Comingsoon.html
+++ b/pages/Comingsoon.html
@@ -102,7 +102,7 @@
             <p class="">© 2024 Copyright: FCC IIT Hyderabad</p>
           </div>
           <div class="col mb-3">
-            <h5>About Us</h5>
+            <h3>About Us</h3>
             <ul class="nav flex-column">
               <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">FCC Leadership</a></li>
               <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Blogs</a></li>
@@ -113,18 +113,18 @@
           </div>
       
           <div class="col mb-3">
-            <h5>Useful Links</h5>
+            <h3>Useful Links</h3>
             <ul class="nav flex-column">
               <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-body-light">Home</a></li>
               <li class="nav-item mb-2"><a href="Horizon.html" class="nav-link p-0 text-body-light" target="_blank">Horizon</a></li>
               <li class="nav-item mb-2"><a href="Sponsors.html" class="nav-link p-0 text-body-light" target="_blank">Sponsors</a></li>
-              <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" target="_blank">Workshops</a></li>
+              <li class="nav-item mb-2"><a href="Comingsoon.html" class="nav-link p-0 text-body-light" >Workshops</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-light"></a></li>
             </ul>
           </div>
       
           <div class="col mb-3">
-            <h5>Socials</h5>
+            <h3>Socials</h3>
             <ul class="nav flex-column">
               <li class="nav-item mb-2"><a href="https://www.instagram.com/fcc_iith/" class="nav-link p-0 text-body-light" target="_blank">Instagram</a></li>
               <li class="nav-item mb-2"><a href="https://www.linkedin.com/company/fcc-iith/" class="nav-link p-0 text-body-light" target="_blank">LinkedIn</a></li>
@@ -134,7 +134,7 @@
             </ul>
           </div>
           <div class="col mb-3">
-            <h5>Contact</h5>
+            <h3>Contact</h3>
             <ul class="nav flex-column">
               <li class="nav-item mb-2" ><p class="nav-link p-0 " style="color: white;">IIT Hyderabad, Sangareddy,
                 Telangana, India - 502285</p></li>
