--- a/pages/Sponsors.html
+++ b/pages/Sponsors.html
@@ -118,7 +118,7 @@
         <div class="white-noise1 white2-1"></div>
         <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 border-top ">
           <div class="col mb-3">
-            <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
+            <a href="../index.html" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
               <img src="../images/Group 31.svg" width="60%" height="60%" alt="">
             </a>
             <p class="">© 2024 Copyright: FCC IIT Hyderabad</p>
