--- a/pages/Horizon.html
+++ b/pages/Horizon.html
@@ -34,6 +34,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/Draggable.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/EaselPlugin.min.js" defer></script>
     <script src="../script.js" defer></script>
+    <script src="../pages-js/sponsors.js" defer></script>
 
     <title>FCC</title>
     
@@ -150,10 +151,10 @@
         <p>Sponsors</p>
       </div>
       <div class="hor-sponsors-carousel-1">
-        <div class="sponsor-card card-1 "><img src="../images/sponsors/abhibus-min.png" width="90%" height="90%" alt=""></div>
-        <div class="sponsor-card card-2 "><img src="../images/sponsors/decathalon-min.png" width="90%" height="90%" alt=""></div>
-        <div class="sponsor-card card-3 "><img src="../images/sponsors/stockgro-min.png" width="90%" height="90%" alt=""></div>
-        <div class="sponsor-card card-4 "><img src="../images/sponsors/finlarics-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-1 "><img src="../images/sponsors/abhibus-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-2 "><img src="../images/sponsors/decathalon-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-3 "><img src="../images/sponsors/stockgro-min.png" width="90%" height="90%" alt=""></div>
+          <div class="sponsor-card card-4 "><img src="../images/sponsors/finlarics-min.png" width="90%" height="90%" alt=""></div>
         <div class="sponsor-card card-5 "><img src="../images/sponsors/monster-min.png" width="90%" height="90%" alt=""></div>
         <div class="sponsor-card card-6 "><img src="../images/sponsors/product-min.png" width="90%" height="90%" alt=""></div>
         <div class="sponsor-card card-7 "><img src="../images/sponsors/sid farm-min.png" width="90%" height="90%" alt=""></div>
@@ -164,7 +165,7 @@
         <div class="sponsor-card card-12 "><img src="../images/sponsors/easemytrip-min.png" width="90%" height="90%" alt=""></div>
         <div class="sponsor-card card-13 "><img src="../images/sponsors/elearnmarkets-min.png" width="90%" height="90%" alt=""></div>
         <div class="sponsor-card card-14 "><img src="../images/sponsors/preplounge-min.png" width="90%" height="90%" alt=""></div>
-      </div>
+      </div>    
     </div>
 
       <!-- FOOTER -->
